Are U sure buttons

--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -46,7 +46,7 @@
 				</td>
 
 				<td style="float: left; margin-left: 5px;">
-					<button class="browser-style" ng-click="page.remove(script)" style="margin-left: 5px; width: 80px; text-align: center;"> Remove </button>
+					<are-u-sure style="margin-left: 5px;" text="'Remove'" action="page.remove(script)"> </are-u-sure>
 				</td>
 				
 			</tr>
