--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -49,7 +49,7 @@
 			
 		</div>
 		
-		<div ui-view="debug"></div>
+		<!-- <div ui-view="debug"></div> -->
 		
 		<script src="options.js"></script>
 	</body>
