--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -4,13 +4,13 @@
 		
 		<dd-title val="'groups_active'" text="'Groups'" style="margin: 15px;"></dd-title>
 		
-		<div style="display: inline-block; width: 100%; margin-top: 30px;" ng-show="groups_active">
+		<div style="display: inline-block; width: 100%; margin-top: 10px;" ng-show="groups_active">
 			
-			<div style="margin-bottom: 20px;margin-right: 20px;margin-left: 25px" ng-if="groups.length">
+			<div style="margin-bottom: 20px;margin-right: 20px;margin-left: 56px" ng-if="groups.length">
 				
 				<site-validator style="width:55%;" ev="events" url="url" time="1750"> </site-validator>
 					
-				<div style="float: right;">	
+				<div style="float: right;margin-right: 30px">	
 					to 
 					<select class="browser-style" ng-model="current" ng-options="group for group in groups track by group" ng-change="selectChange(current)"></select>
 					<button ng-disabled="validation_in_progress" class="browser-style" ng-click="addSite()"> {{action}} Site </button>
