--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -78,7 +78,7 @@
 			</table>
 			<no-info ng-if="!domains.length && !groups.length" style="padding-top: 6%;"></no-info>
 			<div style="text-align: center;margin-top: 25px;">
-				<label for="import_data"
+				<label for="import_data">
 					<bdi> Import Data </bdi>
 					<input
 						class="browser-style"
