--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -9,7 +9,7 @@
 					<th></th>
 					<th style="text-align: center;"> Name </th>
 					<th style="text-align: center;"> Scripts </th>
-					<th style="text-align: center;"> Resources / Sites </th>
+					<th style="text-align: center;"> Sites </th>
 					<th style="text-align: center;"> Actions </th>
 				</thead>
 				<tbody style="display: table-row-group;">
