Virtual Resources: Files properly persisted.

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -50,7 +50,7 @@
 			
 		</div>
 		
-		<!-- <div ui-view="debug"></div> -->
+		<div ui-view="debug"></div>
 		
 		<script src="options.js"></script>
 	</body>
