Virtual Resources ==> to file system

--- a/fg/opt_page/resources.html
+++ b/fg/opt_page/resources.html
@@ -1,9 +1,9 @@
 <div>	
 	<div>
-		<dd-title val="'resources_active'" text="'Resources'"></dd-title>
+		<dd-title val="'resources_active'" text="'Virtual Resources'"></dd-title>
 		
 		<div ng-show="resources_active" style="width: 100%;">
-
+			
 			<div style="min-height: 30px;margin: 10px;text-align: center;width: 100%;margin-bottom: 20px;-moz-user-select: text;"> {{ info_text }} </div>
 			<table style="display: table;width: 100%;margin-left: 75px;" ng-if="resources.length">
 				<thead>
