--- a/fg/opt_page/resources-alt.html
+++ b/fg/opt_page/resources-alt.html
@@ -4,7 +4,7 @@
 		
 		<div ng-show="resources_active" style="width: 100%;margin-left: 75px;margin-bottom: 75px;min-height: 150px">
 			
-			<resource-directory name="list.name" items="list.items" parent="'/'", mgr="page.bg.resource_mgr"> </resource-directory>
+			<resource-directory name="list.name" items="list.items"  mgr="page.bg.resource_mgr"> </resource-directory>
 			
 		</div>
 
