Virtual Resources: Hierarchy Alpha 1.

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -43,7 +43,7 @@
 				<div class="text-section-header browser-style" style="font-weight: 475;font-size: 1.67em;">User Data</div>
 				
 				<div ui-view="app-data"></div>
-				<div ui-view="resources-alt"></div>
+				<div ui-view="resources"></div>
 				<div ng-if="data_origin.available" ui-view="app-db"></div>
 
 			</div>
