Virtual Resources filter: Alpha 1.

--- a/fg/opt_page/resources.html
+++ b/fg/opt_page/resources.html
@@ -3,8 +3,8 @@
 		<dd-title val="'resources_active'" text="'Virtual Resources'"></dd-title>
 
 		<label ng-show="resources_active" for="input_filter" style="margin-left: 75px;">
-			<strong> Search directory: </strong>
 			<input
+				placeholder="Search path ..." 
 				id="input_filter"
 				style="width: 65%; margin-bottom: 15px;margin-left: 15px;"
 				class="browser-style"
