Finally removed outline from drop-down buttons! =P.

--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -96,7 +96,7 @@
 			   id="settings_img"
 			   class="hidden-elem"
 			   ng-show="!settings_hover"
-			   style="outline: none;"
+			   style="outline: none;cursor: pointer;"
 			   src="../icons/settings_gears.png"
 			   width="48px"
 			   height="48px"
