--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -6,7 +6,7 @@
 	  <meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self'; img-src 'self'">
 	  
 	  <link rel="stylesheet" href="pa.css">
-	  <link rel="stylesheet" href="chrome://browser/content/extension.css">
+	  <!-- <link rel="stylesheet" href="chrome://browser/content/extension.css"> -->
 	  <link rel="stylesheet" href="../styles/jsl.css">
 	  
 	  <script src="../deps/jquery.min.js"></script>
