Virtual Resources: Content API (alpha 1)

--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -6,10 +6,10 @@
 	
 	<table style="margin-bottom: 30px;width: 100%;display: table;margin-left: 20px;" ng-show="item.visible">
 		<thead>
-			<th style="min-width: 30%;">
+			<th style="text-align: left; min-width: 30%;">
 				Name
 			</th>
-			<th>
+			<th style="text-align: left;">
 				Status
 			</th>
 			<th></th>
