--- a/fg/opt_page/resources.html
+++ b/fg/opt_page/resources.html
@@ -6,14 +6,14 @@
 			<input
 				placeholder="Search path ..." 
 				id="input_filter"
-				style="width: 65%; margin-bottom: 15px;margin-left: 15px;"
+				style="width: 65%; margin-bottom: 15px;"
 				class="browser-style"
 				type="text"
 				ng-change="filterChange()"
 				ng-model="filter"/>
 		</label>
 		
-		<div ng-show="resources_active && data_ok" style="width: 100%;margin-left: 75px;margin-bottom: 75px;min-height: 150px">
+		<div ng-show="resources_active && data_ok" style="width: 100%;margin-left: 75px;margin-bottom: 45px;">
 			
 			<resource-directory ng-if="list.items" name="list.name" items="list.items"  mgr="page.bg.resource_mgr"> </resource-directory>
 			<resource-item ng-if="!list.items" resource="list"></resource-item>
