Pagination (WIP): still broken

--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -52,7 +52,7 @@
 					</td>
 
 					<td style="float: left; margin-left: 5px;">
-						<are-u-sure style="margin-left: 5px;" text="'Remove'" action="page.remove(script)"> </are-u-sure>
+						<are-u-sure style="margin-left: 5px;" text="'Remove'" action="removeScript(script)"> </are-u-sure>
 					</td>
 					
 				</tr>
