Paginate lists (WIP): Clean up code. Missing testing. Group manager & outter lists.

--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -21,7 +21,7 @@
 			<no-info text="'No Groups'" ng-if="!groups.length"></no-info>
 			
 			<div id="button-bottom" class="bottom-bucket" style="text-align: center; margin: 0;">
-				<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)"> Create Group </button>
+				<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)"> Add Group Script </button>
 			</div>
 		</div>
 
