Pagination: ++Group manager, missing testing for group.includes

--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -43,7 +43,7 @@
 							  <div ui-view="domains"></div>
 						  </div>
 						  
-						  <div ng-if="info.groups.total">
+						  <div>
 							  <div ui-view="groups"></div>
 						  </div>
 						  
