--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -1,4 +1,4 @@
-<ul ng-repeat="list in data" ng-if="list.total">
+<ul style="margin: 0 0 0 0" style="browser-style" ng-repeat="list in data" ng-if="list.total">
 	<h4 style="margin: 10px 0 0 20px;"> {{list.title}}
 		<drop-down item="list" width="14" height="14"></drop-down>
 	</h4>
