Pagination ++: Missing testing for PA, Missing opt page.

--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -48,7 +48,7 @@
 							</div>
 						</td>
 					</tr>
-					<tr ng-if="domains.total > 5" paginator feeding="page.bg.domain_mgr.getSlice", slice="5" actual="domains.actual" total="domains.total" parent="newDomains"></tr><br>
+					<tr ng-if="domains.total > 5" paginator pag-big feeding="page.bg.domain_mgr.getSlice", slice="5" actual="domains.actual" total="domains.total" parent="newDomains"></tr><br>
 					<tr ng-repeat="group in groups.data track by group.name">
 						<td>
 							<h2 ng-if="!$index" style="margin: 0;margin-left: 50px;"> Groups: </h2>
