--- a/fg/opt_page/resources.html
+++ b/fg/opt_page/resources.html
@@ -15,8 +15,8 @@
 		
 		<div ng-show="resources_active && data_ok" style="width: 100%;margin-left: 75px;margin-bottom: 45px;">
 			
-			<resource-directory ng-if="list.items" name="list.name" items="list.items"  mgr="page.bg.resource_mgr"> </resource-directory>
-			<resource-item ng-if="!list.items" resource="list"></resource-item>
+			<resource-directory ng-if="list.items" name="list.name" items="list.items"  mgr="page.bg.resource_mgr" events="events"> </resource-directory>
+			<resource-item ng-if="!list.items" resource="list" events="events"></resource-item>
 			
 		</div>
 
