--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -44,13 +44,13 @@
 				
 				<div ui-view="app-data"></div>
 				<div ui-view="resources"></div>
-				<div ng-if="data_origin.available" ui-view="app-db"></div>
+				<!-- <div ng-if="data_origin.available" ui-view="app-db"></div> -->
 
 			</div>
 			
 		</div>
 		
-		<!-- <div ui-view="debug"></div> -->
+		<div ui-view="debug"></div>
 		
 		<script src="options.js"></script>
 	</body>
