DB added PA management

--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -167,7 +167,7 @@
 				</button>
 				<are-u-sure
 					ng-if="domains.data.length || groups.data.length"
-					text="'Clear Storage'"
+					text="'Clear Data'"
 					padding="35"
 					action="clearStoredData()">
 				</are-u-sure>
