--- a/fg/opt_page/editor-settings.html
+++ b/fg/opt_page/editor-settings.html
@@ -1,7 +1,7 @@
 <div>
 	<div>
 		
-		<dd-title val="'editor_active'" text="'Editor settings'"></dd-title>
+		<dd-title val="'editor_active'" text="page.bg.texts.findText('editor_settings')"></dd-title>
 		
 		<div style="margin-top: 25px;" ng-show="editor_active">
 
