--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -3,13 +3,13 @@
 <html>
 	<head>
 		
-		<link rel="stylesheet" href="options.css"/>
+		<!-- <link rel="stylesheet" href="options.css"/> -->
 		
 		<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self'; img-src 'self';">
 		
-		<link rel="stylesheet" href="chrome://browser/content/extension.css">
+		<!-- <link rel="stylesheet" href="chrome://browser/content/extension.css"> -->
 		<link rel="stylesheet" href="../styles/jsl.css">
-		
+		<link rel="stylesheet" href="../styles/extension.css">
 		
 		<script src="../deps/jquery.min.js"></script>
 		<script src="../deps/angular.min.js"></script>
