--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -7,6 +7,7 @@
 	  
 	  <link rel="stylesheet" href="pa.css">
 	  <link rel="stylesheet" href="../styles/jsl.css">
+	  <link rel="stylesheet" href="../styles/extension.css">
 	  
 	  <script src="../deps/jquery.min.js"></script>
 	  <script src="../deps/angular.min.js"></script>
