Bugs fixed for emty groups, and editor popup, README updated

--- a/fg/opt_page/resources.html
+++ b/fg/opt_page/resources.html
@@ -4,7 +4,7 @@
 
 		<label ng-show="resources_active" for="input_filter" style="margin-left: 75px;">
 			<input
-				placeholder="Search path ..." 
+				placeholder="{{ page.bg.texts.findText('search_path') }}" 
 				id="input_filter"
 				style="width: 65%; margin-bottom: 15px;"
 				class="browser-style"
