--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -35,7 +35,7 @@
 			  <div class="text-section-header" style="display: inline-block;width: 100%;">
 				  
 				  <script-name script="script" ng-if="!script.parent.isResource()" onlyval="true" style="width: 15%;display: inline-block;float: left"></script-name>
-				  <bdi style="float: left;" ng-if="script.parent.isResource()">  {{ page.bg.texts.findText("resource") }} </bdi> <bdi style="float: inline-start;margin: 0 15px 0 15px;">||</bdi>
+				  <bdi style="float: left;" ng-if="script.parent.isResource()">  {{ page.bg.texts.findText("resource") }} </bdi> <bdi style="float: inline-start;vertical-align:top; margin: 0 15px 0 15px">||</bdi>
 				  
 				  <div style="width: 80%;display: inline-block">
 					  <bdi ng-if="!script.parent.isResource()" id="user_action" class="bold" style="display: inline; width: 10%;margin-top: 5px;float: left;"> {{ page.bg.texts.findText("script_for") }} </bdi>
