--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -90,7 +90,7 @@
 	  <div id="btns_panel" class="panel-section hidden-elem" ng-mouseenter="buttonToggle()" style="z-index: 99999999999999999999999; margin: auto;">
 		  
 		  <button 
-			  ng-disabled="(buttons.disabled ? true : (!script.parent ? false : (!page.bg.db.available ? false : (page.bg.db.writeable ? false : !editor.script.inStorage()))))"
+			  ng-disabled="!canSave()"
 			  class="hidden-elem browser-style mright jsload_button"
 			  ng-click="saveCurrent()">
 
@@ -110,7 +110,7 @@
 		  
 		  <button 
 			  ng-show="script.persisted && script.parent && !script.parent.isResource()"
-			  ng-disabled="(buttons.disabled ? true : (!page.bg.db.available ? false : (page.bg.db.writeable && page.bg.db.removeable ? false : !editor.script.inStorage())))"
+			  ng-disabled="!canRemove()"
 			  class="hidden-elem browser-style mright jsload_button"
 			  ng-click="script.remove()">
 
