--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -60,7 +60,7 @@
 				  
 				  <div ng-if="scripts_active">
 
-					  <div ng-if="info.domains.length || info.groups[0].total || page.pa_state.outdated" style="margin-left: 0px;">
+					  <div style="margin-left: 0px;">
 
 						  <div ng-if="info.domains.length">
 							  <div ui-view="domains"></div>
