--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -130,7 +130,6 @@
 						</td>
 						<td style="text-align: center;">
 							<div style="text-align: center;">
-								<!-- if removeable or item live in storage -->
 								<are-u-sure
 									ng-disabled="page.bg.db.reconnecting"
 									ng-show="page.bg.db.removeable || group.in_storage"
@@ -166,6 +165,10 @@
 				<button class="browser-style"
 					ng-if="domains.data.length || groups.data.length"
 					ng-click="exportData()"> {{ page.bg.texts.findText('export_data') }}
+				</button>
+				<button class="browser-style"
+					ng-if="!domains.data.length && !groups.data.length"
+					ng-click="loadInitialExamples()"> {{ page.bg.texts.findText('load_examples') }}
 				</button>
 				<are-u-sure
 					ng-if="domains.data.length || groups.data.length"
