--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -4,7 +4,7 @@
 		
 		<div ng-show="appdata_active" style="width: 100%;">
 
-			<table style="display: table;width: 100%;" ng-if="page.bg.db.available">
+			<table style="display: table;width: 100%;" ng-show="page.bg.db.available">
 				<thead>
 					<th></th>
 					<th></th>
@@ -30,21 +30,21 @@
 						</td>
 						<td style="text-align: center; width: 10%;padding: 55px">
 							<div style="width: 40px;height: 40px;">
-								<img src="../icons/ok_tick.png" ng-show="page.bg.db.connected && !page.bg.db.reconnecting" width="24px" height="24px">
-								<img src="../icons/ko_tick.png" ng-show="!page.bg.db.connected && !page.bg.db.reconnecting" width="32px" height="32px">
-								<img src="../icons/loading.gif" ng-show="page.bg.db.reconnecting" width="32px" height="32px">
+								<img class="status" src="../icons/ok_tick.png" ng-show="page.bg.db.connected && !page.bg.db.reconnecting" width="24px" height="24px">
+								<img class="status" src="../icons/ko_tick.png" ng-show="!page.bg.db.connected && !page.bg.db.reconnecting" width="32px" height="32px">
+								<img class="status" src="../icons/loading.gif" ng-show="page.bg.db.reconnecting" width="32px" height="32px">
 							</div>
 						</td>
 						<td style="text-align: center; width: 10%;padding: 55px">
 							<div style="width: 40px;height: 40px;">
-								<img src="../icons/ok_tick.png" ng-show="page.bg.db.connected && page.bg.db.readable && !page.bg.db.reconnecting" width="24px" height="24px">
-								<img src="../icons/ko_tick.png" ng-show="page.bg.db.connected && !page.bg.db.readable && !page.bg.db.reconnecting" width="32px" height="32px">
+								<img class="status" src="../icons/ok_tick.png" ng-show="page.bg.db.connected && page.bg.db.readable && !page.bg.db.reconnecting" width="24px" height="24px">
+								<img class="status" src="../icons/ko_tick.png" ng-show="page.bg.db.connected && !page.bg.db.readable && !page.bg.db.reconnecting" width="32px" height="32px">
 							</div>
 						</td>
 						<td style="text-align: center; width: 10%;padding: 55px">
 							<div style="width: 40px;height: 40px;">
-								<img src="../icons/ok_tick.png" ng-show="page.bg.db.connected && page.bg.db.writeable && !page.bg.db.reconnecting" width="24px" height="24px">
-								<img src="../icons/ko_tick.png" ng-show="page.bg.db.connected && !page.bg.db.writeable && !page.bg.db.reconnecting" width="32px" height="32px">
+								<img class="status" src="../icons/ok_tick.png" ng-show="page.bg.db.connected && page.bg.db.writeable && !page.bg.db.reconnecting" width="24px" height="24px">
+								<img class="status" src="../icons/ko_tick.png" ng-show="page.bg.db.connected && !page.bg.db.writeable && !page.bg.db.reconnecting" width="32px" height="32px">
 							</div>
 						</td>
 					</tr>
@@ -130,7 +130,6 @@
 						</td>
 						<td style="text-align: center;">
 							<div style="text-align: center;">
-								<!-- if removeable or item live in storage -->
 								<are-u-sure
 									ng-disabled="page.bg.db.reconnecting"
 									ng-show="page.bg.db.removeable || group.in_storage"
@@ -164,12 +163,12 @@
 					text="page.bg.texts.findText('import_data')">
 				</input-file>
 				<button class="browser-style"
-					ng-if="!domains.data.length && !groups.data.length"
-					ng-click="loadInitialExamples()"> {{ page.bg.texts.findText('load_examples') }}
-				</button>
-				<button class="browser-style"
 					ng-if="domains.data.length || groups.data.length"
 					ng-click="exportData()"> {{ page.bg.texts.findText('export_data') }}
+				</button>
+				<button class="browser-style"
+					ng-if="!domains.data.length && !groups.data.length"
+					ng-click="loadInitialExamples()"> {{ page.bg.texts.findText('load_examples') }}
 				</button>
 				<are-u-sure
 					ng-if="domains.data.length || groups.data.length"
